fixed animation on small  devices

--- a/index.css
+++ b/index.css
@@ -238,12 +238,21 @@ nav {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow: hidden !important;
+  overflow-x: hidden !important;
 }
 
 .main-heading {
   width: 100%;
   height: fit-content;
   text-align: center;
+}
+
+body {
+  overflow: hidden !important;
+  overflow-x: hidden !important;
+  user-select: none !important;
 }
 
 .div {
@@ -263,7 +272,7 @@ nav {
 .main-heading > h1 {
   color: #030304;
   font-weight: 400;
-  font-size: 120px;
+  font-size: 100px;
   font-weight: 900;
   cursor: pointer;
   text-transform: uppercase;
@@ -277,6 +286,13 @@ h1:nth-child(2) {
 .main-heading > h1:nth-child(3) {
   font-family: font2;
 }
+
+/* .cardArea {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: transparent;
+} */
 
 @media (max-width: 1000px) {
   .nav-offcanvas-link {
@@ -309,6 +325,13 @@ h1:nth-child(2) {
   .main-heading > h1:nth-child(1),
   h1:nth-child(2) {
     font-family: font1;
+  }
+
+  .div {
+    width: 100px;
+    height: 200px;
+    position: absolute;
+    overflow: hidden;
   }
 }
 
